[package]
name = "timr"
version = "0.1.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
license = "MIT"
description = "Simple CLI timer"
readme = "README.md"
homepage = "https://github.com/The-Noah/timr"
repository = "https://github.com/The-Noah/timr"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
ctrlc = { version = "3.4.5", features = ["termination"] }
termsize = "0.1.9"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Console"]
