[package]
name = "timr"
version = "0.5.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
license = "MIT"
description = "Simple CLI timer"
readme = "README.md"
homepage = "https://github.com/The-Noah/timr"
repository = "https://github.com/The-Noah/timr"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "std",
] }
ctrlc = { version = "3.4.5", features = ["termination"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
termsize = "0.1.9"
toml = "0.8.19"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Console"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = ["Win32_Globalization", "Win32_System_Com", "Win32_UI_Shell"]
